# fSpy-Maya

./: .gitignore  README.md  pyproject.toml
fspy_maya/: __init__.py  __version__.py  core.py  fspy.py  fspy_installer.py  fspy_plugin.py
manual_install/: read_me.txt
