[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fSpy_maya"
version = "0.9.1"
authors = [
  { name="Nathaniel A", email="developer@3dcg.guru" },
]
description = "Import fSpy files into Maya"
readme = "README.md"
requires-python = ">=2.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Nathanieljla/fSpy-Maya"
