[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fspy-maya"
version = "0.9.3"
authors = [
  { name="Nathaniel A", email="developer@3dcg.guru" },
]
description = "Import fspy files into Maya"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pymel>=1.3",
]

[project.urls]
"Homepage" = "https://github.com/Nathanieljla/fSpy-Maya"
